use development environment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,6 @@ package-internal:
         MAVEN_PROFILE: internal
     only:
         - master
-        - feature/check-tomcat-deploy-started-correctly
 
 package-development:
     extends: .package
@@ -55,6 +54,7 @@ package-development:
         MAVEN_PROFILE: development
     only:
         - master
+        - feature/check-tomcat-deploy-started-correctly
 
 package-production:
     extends: .package
@@ -72,8 +72,10 @@ package-production:
         name: $ENVIRONMENT_NAME
     script:
         - apk add --update curl
-        - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD -T "$WS_ARTIFACT_PATH" "http://$TOMCAT_HOST/manager/text/deploy?update=true&path=/eva/webservices/identifiers&version=$DATETIME" | grep "OK - Deployed application"
-        - if [ $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers##$DATETIME" ) == 0 ]; then exit 1; fi
+#        - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD -T "$WS_ARTIFACT_PATH" "http://$TOMCAT_HOST/manager/text/deploy?update=true&path=/eva/webservices/identifiers&version=$DATETIME" | grep "OK - Deployed application"
+#        - if [ $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers##$DATETIME" ) == 0 ]; then exit 1; fi
+        - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD -T "$WS_ARTIFACT_PATH" "http://$TOMCAT_HOST/manager/text/deploy?update=true&path=/eva/webservices/identifiers/EVA-1915&version=$DATETIME" | grep "OK - Deployed application"
+        - if [ $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers#EVA-1915##$DATETIME" ) == 0 ]; then exit 1; fi
 
 deploy-tomcat-internal:
     extends: .deploy-tomcat
@@ -86,7 +88,6 @@ deploy-tomcat-internal:
         - package-internal
     only:
         - master
-        - feature/check-tomcat-deploy-started-correctly
 
 deploy-tomcat-development:
     extends: .deploy-tomcat
@@ -99,6 +100,7 @@ deploy-tomcat-development:
         - package-development
     only:
         - master
+        - feature/check-tomcat-deploy-started-correctly
 
 deploy-tomcat-production:
     extends: .deploy-tomcat
