--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,7 @@ package-development:
         MAVEN_PROFILE: development
     only:
         - master
+        - feature/before-spring-boot-2
 
 package-production:
     extends: .package
@@ -71,14 +72,15 @@ package-production:
     script:
         - apk add --update curl
         - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD -T "$WS_ARTIFACT_PATH" "http://$TOMCAT_HOST/manager/text/deploy?update=true&path=/eva/webservices/identifiers/EVA-1915&version=$DATETIME" | grep "OK - Deployed application"
-        - >
-            for attempt in {1..10}; do
-              if [ $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers#EVA-1915##$DATETIME" ) > 0 ];
-                then exit 0;
-              fi;
-              sleep 30;
-            done;
-            echo "application failed to start in Tomcat server"
+        - for attempt in {1..10}; do if [ $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers#EVA-1915##$DATETIME" ) > 0 ]; then exit 0; fi; sleep 30; done; echo "application failed to start in Tomcat server"
+#        - >
+#            for attempt in {1..10}; do
+#              if [ $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers#EVA-1915##$DATETIME" ) > 0 ];
+#                then exit 0;
+#              fi;
+#              sleep 30;
+#            done;
+#            echo "application failed to start in Tomcat server"
 
 deploy-tomcat-internal:
     extends: .deploy-tomcat
@@ -104,6 +106,7 @@ deploy-tomcat-development:
         - package-development
     only:
         - master
+        - feature/before-spring-boot-2
 
 deploy-tomcat-production:
     extends: .deploy-tomcat
