--- a/eva-accession-import/src/test/resources/contig-test.properties
+++ b/eva-accession-import/src/test/resources/contig-test.properties
@@ -18,3 +18,4 @@ mongodb.read-preference=primary
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+spring.jmx.enabled=false
