--- a/eva-accession-import/src/test/resources/test-variants-writer.properties
+++ b/eva-accession-import/src/test/resources/test-variants-writer.properties
@@ -14,3 +14,4 @@ mongodb.read-preference=primary
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+spring.jmx.enabled=false
