--- a/eva-accession-import/src/test/resources/validate-contigs-fail.properties
+++ b/eva-accession-import/src/test/resources/validate-contigs-fail.properties
@@ -24,3 +24,4 @@ spring.data.mongodb.port=27017
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+spring.jmx.enabled=false
