--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ package-internal:
         MAVEN_PROFILE: internal
     only:
         - master
+        - feature/use-maven-settings-config-file
 
 package-development:
     extends: .package
@@ -83,6 +84,7 @@ deploy-tomcat-internal:
         - package-internal
     only:
         - master
+        - feature/use-maven-settings-config-file
 
 deploy-tomcat-development:
     extends: .deploy-tomcat
