--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,9 @@ stages:
 variables:
     WS_ARTIFACT_PATH: eva-accession-ws/target/eva-accession-ws-$ENVIRONMENT_NAME.war
     CLUSTERING_ARTIFACT_PATH: eva-accession-clustering/target/eva-accession-clustering-*.jar
+    MAVEN_SETTINGS: maven-settings.xml
+    URL_MAVEN_SETTINGS: https://api.github.com/repos/EBIvariation/configuration/contents/eva-maven-settings.xml
+    MEDIA_TYPE: application/vnd.github.raw
 
 before_script:
     - export DATETIME=$(date +%Y-%m-%dT%H-%M-%S)
@@ -30,9 +33,15 @@ test:
     image: maven:3.6.1-jdk-8-alpine
     environment:
         name: $ENVIRONMENT_NAME
+    before_script:
+        - apk add --update curl
+        - curl -u $GITHUB_USER:$GITHUB_TOKEN -H "Accept:$MEDIA_TYPE" $URL_MAVEN_SETTINGS > $MAVEN_SETTINGS
     script:
-        - mvn package --projects 'eva-accession-core,eva-accession-ws,eva-accession-clustering ' --settings .gitlab.settings.xml -P $MAVEN_PROFILE -DskipTests -Dtimestamp="$DATETIME"
+#        - mvn package --projects 'eva-accession-core,eva-accession-ws,eva-accession-clustering ' --settings .gitlab.settings.xml -P $MAVEN_PROFILE -DskipTests -Dtimestamp="$DATETIME"
+        - mvn package --projects 'eva-accession-core,eva-accession-ws,eva-accession-clustering ' --settings $MAVEN_SETTINGS -P $MAVEN_PROFILE -DskipTests -Dtimestamp="$DATETIME"
         - cp eva-accession-ws/target/eva*.war $WS_ARTIFACT_PATH
+    after_script:
+        - rm $MAVEN_SETTINGS
     artifacts:
         paths:
             - $WS_ARTIFACT_PATH
