change back properties file

--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -23,5 +23,4 @@ management.info.git.mode=full
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
 
-#spring.jmx.default-domain=eva.ebi.ac.uk.|timestamp|
-spring.jmx.enabled = false
+spring.jmx.default-domain=eva.ebi.ac.uk.|timestamp|
