--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>uk.ac.ebi.eva</groupId>
     <artifactId>eva-accession</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
+    <version>0.4.2</version>
     <packaging>pom</packaging>
 
     <name>eva-accession</name>
@@ -37,7 +37,7 @@
             <dependency>
                 <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>eva-accession-core</artifactId>
-                <version>0.4.1-SNAPSHOT</version>
+                <version>0.4.2</version>
             </dependency>
             <dependency>
                 <groupId>uk.ac.ebi.ampt2d</groupId>
