--- a/eva-accession-remapping/src/main/resources/application.properties
+++ b/eva-accession-remapping/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-spring.batch.job.names=ACCESSION_RELEASE_JOB
+spring.batch.job.names=EXPORT_SUBMITTED_VARIANTS_JOB
 
 parameters.assemblyAccession=
 parameters.fasta=
+
+# if empty, no contig replacement will be done
 parameters.assemblyReportUrl=
+
 parameters.outputFolder=
 parameters.forceRestart=false
+
+# TODO remove
 parameters.chunkSize=100
+
 
 # job repository datasource
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -17,17 +23,24 @@ spring.datasource.tomcat.max-active=3
 # Only to set up the database!
 # spring.jpa.generate-ddl=true
 
-# MongoDB for storing imported accessions
+# MongoDB with variant accessions
 spring.data.mongodb.host=
 spring.data.mongodb.port=
 spring.data.mongodb.database=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
-spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.authentication-database=
 mongodb.read-preference=|eva.mongo.read-preference|
 
 spring.main.web-environment=false
+
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
 
-logging.level.uk.ac.ebi.eva.accession.release=INFO
+
+# This entry is put just to avoid a warning message in the logs when you start the spring-boot application.
+# This bug is from hibernate which tries to retrieve some metadata from postgresql db and failed to find that and logs as a warni
+# It doesn't cause any issue though.
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+logging.level.uk.ac.ebi.eva.accession.remapping=INFO
