remapping: reevaluate chunksize, choose to keep it
It is needed for both the writer list size and the progress listener.

--- a/eva-accession-remapping/src/main/resources/application.properties
+++ b/eva-accession-remapping/src/main/resources/application.properties
@@ -9,8 +9,8 @@ parameters.assemblyReportUrl=
 parameters.outputFolder=
 parameters.forceRestart=false
 
-# TODO remove
-parameters.chunkSize=100
+# this only affects the frequency of the logs
+parameters.chunkSize=1000
 
 
 # job repository datasource
