--- a/eva-accession-remapping/src/main/resources/application.properties
+++ b/eva-accession-remapping/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.batch.job.names=EXPORT_SUBMITTED_VARIANTS_JOB
 
-parameters.assemblyAccession=
 parameters.fasta=
+parameters.assemblyAccession=
+
+# comma-separated values. if empty, all projects in the assembly will be queried
+parameters.projects=
 
 # if empty, no contig replacement will be done
 parameters.assemblyReportUrl=
