--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -3,11 +3,17 @@ parameters.projectAccession=projectId_1
 parameters.assemblyAccession=GCA_000000001.1
 parameters.chunkSize=2
 
-accessioning.instanceId=test-instance-01
+accessioning.instanceId=instance-01
+accessioning.submitted.categoryId=ss
 accessioning.clustered.categoryId=rs
+
+accessioning.monotonic.ss.blockSize=100000
+accessioning.monotonic.ss.blockStartValue=5000000000
+accessioning.monotonic.ss.nextBlockInterval=1000000000
 accessioning.monotonic.rs.blockSize=100000
 accessioning.monotonic.rs.blockStartValue=3000000000
 accessioning.monotonic.rs.nextBlockInterval=1000000000
+
 
 spring.data.mongodb.database=test-db
 spring.data.mongodb.host=localhost
