document application.properties

--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -1,4 +1,18 @@
+# choose one from the next jobs: CLUSTERING_FROM_VCF_JOB, CLUSTERING_FROM_MONGO_JOB
 spring.batch.job.names=
+
+# Clustering will only be done for this assembly.
+# If variants are read from a VCF, it will be assumed that the variants belong to this assembly.
+parameters.assemblyAccession=
+
+# the VCF path is required only for CLUSTERING_FROM_VCF_JOB
+parameters.vcf=
+
+# the project accession is required only for CLUSTERING_FROM_VCF
+parameters.projectAccession=
+
+parameters.chunkSize=100
+
 
 accessioning.instanceId=instance-01
 accessioning.submitted.categoryId=ss
@@ -11,10 +25,6 @@ accessioning.monotonic.rs.blockSize=100000
 accessioning.monotonic.rs.blockStartValue=3000000000
 accessioning.monotonic.rs.nextBlockInterval=1000000000
 
-parameters.vcf=
-parameters.projectAccession=
-parameters.assemblyAccession=
-parameters.chunkSize=
 
 spring.data.mongodb.database=
 spring.data.mongodb.host=
