--- a/eva-accession-deprecate/src/main/resources/application.properties
+++ b/eva-accession-deprecate/src/main/resources/application.properties
@@ -28,5 +28,7 @@ mongodb.read-preference=|eva.mongo.read-preference|
 spring.main.web-environment=false
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+# To work around this bug: https://github.com/pgjdbc/pgjdbc/issues/1102
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 logging.level.uk.ac.ebi.eva.accession.dbsnp=INFO
