--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -23,3 +23,5 @@ mongodb.read-preference=primaryPreferred
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+# To work around this bug: https://github.com/pgjdbc/pgjdbc/issues/1102
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
