--- a/eva-accession-release/src/test/resources/release-pipeline-test.properties
+++ b/eva-accession-release/src/test/resources/release-pipeline-test.properties
@@ -20,3 +20,7 @@ mongodb.read-preference=primary
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+
+# to fix exception javax.management.InstanceAlreadyExistsException: com.zaxxer.hikari:name=dataSource,type=HikariDataSource
+# see https://stackoverflow.com/a/51798043/2375586
+spring.jmx.enabled=false
