--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
                 <version>0.4.3-SNAPSHOT</version>
             </dependency>
             <dependency>
+                <groupId>uk.ac.ebi.eva</groupId>
+                <artifactId>eva-accession-remapping</artifactId>
+                <version>0.4.3-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>uk.ac.ebi.ampt2d</groupId>
                 <artifactId>accession-commons-mongodb</artifactId>
                 <version>0.7.0</version>
