--- a/eva-accession-core/src/test/resources/properties/test-model.properties
+++ b/eva-accession-core/src/test/resources/properties/test-model.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.database=test-db
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 mongodb.read-preference=primary
