Add incremental import and previous build to application properties

--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -7,7 +7,8 @@ parameters.genbankAssembly=
 # Reference sequence accession
 parameters.refseqAssembly=
 parameters.assemblyReportUrl=
-
+parameters.previousImportedBuild=
+parameters.incrementalImport=false
 parameters.chunkSize=
 parameters.forceRestart=false
 
