Update application properties to use primaryPreferred

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.data.mongodb.port=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
 spring.data.mongodb.authentication-database=
-mongodb.read-preference=|eva.mongo.read-preference|
+mongodb.read-preference=primaryPreferred
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
