--- a/eva-accession-release/src/main/resources/application.properties
+++ b/eva-accession-release/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.data.mongodb.database=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
 spring.data.mongodb.authentication-database=admin
-mongodb.read-preference=|eva.mongo.read-preference|
+mongodb.read-preference=primaryPreferred
 
 spring.main.web-environment=false
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
