--- a/eva-accession-remapping/src/main/resources/application.properties
+++ b/eva-accession-remapping/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.data.mongodb.database=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
 spring.data.mongodb.authentication-database=
-mongodb.read-preference=|eva.mongo.read-preference|
+mongodb.read-preference=primaryPreferred
 
 spring.main.web-environment=false
 
