--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Maven
         run: |
           sudo apt-get install software-properties-common && sudo apt-add-repository universe && sudo apt-get update && sudo apt-get install maven -y
-          curl -v -X GET --url "${URL_MAVEN_SETTINGS}" -u '${{ secrets.GH_USERNAME }}:${{ secrets.GH_TOKEN }}' --header "Accept:${MEDIA_TYPE}" > ${{ matrix.MAVEN_SETTINGS }}
+          curl -v --fail -X GET --url "${URL_MAVEN_SETTINGS}" -u '${{ secrets.GH_USERNAME }}:${{ secrets.GH_TOKEN }}' --header "Accept:${MEDIA_TYPE}" > ${{ matrix.MAVEN_SETTINGS }}
           cat ${{ matrix.MAVEN_SETTINGS }}
         env:
           URL_MAVEN_SETTINGS: ${{ 'https://api.github.com/repos/EBIVariation/configuration/contents/eva-maven-settings.xml?ref=ops/migrate_to_new_jfrog_artifactory' }}
