--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-interval-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-interval-test.properties
@@ -20,7 +20,7 @@ parameters.contigNaming=SEQUENCE_NAME
 spring.jpa.show-sql=true
 
 spring.data.mongodb.database=test-db
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 mongodb.read-preference=primary
