--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-recover-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-recover-test.properties
@@ -27,6 +27,7 @@ parameters.contigNaming=SEQUENCE_NAME
 
 spring.jpa.show-sql=true
 
+spring.data.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
 
