use mongo as hostname in gitlab for remapping module

--- a/eva-accession-remapping/src/test/resources/application.properties
+++ b/eva-accession-remapping/src/test/resources/application.properties
@@ -15,7 +15,7 @@ parameters.outputFolder=/tmp/
 parameters.forceRestart=false
 parameters.chunkSize=1000
 
-
+spring.data.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
 
