update mongo host in clustering properties

--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -16,7 +16,7 @@ accessioning.monotonic.rs.nextBlockInterval=1000000000
 
 
 spring.data.mongodb.database=test-db
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 mongodb.read-preference=primary
