--- a/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-interval-test.properties
+++ b/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-interval-test.properties
@@ -1,14 +1,14 @@
 accessioning.instanceId=test-instance-01
 accessioning.submitted.categoryId=test-pipeline-ss
 
-accessioning.monotonic.test-pipeline-ss.blockSize=100000
-accessioning.monotonic.test-pipeline-ss.blockStartValue=5000000000
-accessioning.monotonic.test-pipeline-ss.nextBlockInterval=1000000000
+accessioning.monotonic.test-pipeline-ss.blockSize=2
+accessioning.monotonic.test-pipeline-ss.blockStartValue=500
+accessioning.monotonic.test-pipeline-ss.nextBlockInterval=10
 
 parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
 parameters.projectAccession=project
-parameters.chunkSize=5
+parameters.chunkSize=100
 parameters.vcf=src/test/resources/input-files/vcf/small_genotyped.vcf.gz
 parameters.vcfAggregation=NONE
 
@@ -27,3 +27,7 @@ mongodb.read-preference=primary
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+
+# to fix exception javax.management.InstanceAlreadyExistsException: com.zaxxer.hikari:name=dataSource,type=HikariDataSource
+# see https://stackoverflow.com/a/51798043/2375586
+spring.jmx.enabled=false
