--- a/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-test.properties
@@ -1,22 +1,14 @@
 accessioning.instanceId=test-instance-01
-accessioning.submitted.categoryId=test-pipeline-recover-ss
+accessioning.submitted.categoryId=test-pipeline-ss
 
-accessioning.monotonic.test-pipeline-recover-ss.blockSize=100000
-accessioning.monotonic.test-pipeline-recover-ss.blockStartValue=5000000000
-accessioning.monotonic.test-pipeline-recover-ss.nextBlockInterval=1000000000
-
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
-spring.datasource.username=SA
-spring.datasource.password=
-spring.datasource.schema=test-data/contiguous_id_blocks_schema.sql
-spring.datasource.data=test-data/contiguous_id_blocks_data.sql
-spring.jpa.hibernate.ddl-auto=update
+accessioning.monotonic.test-pipeline-ss.blockSize=100000
+accessioning.monotonic.test-pipeline-ss.blockStartValue=5000000000
+accessioning.monotonic.test-pipeline-ss.nextBlockInterval=1000000000
 
 parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
 parameters.projectAccession=project
-parameters.chunkSize=100
+parameters.chunkSize=5
 parameters.vcf=src/test/resources/input-files/vcf/small_genotyped.vcf.gz
 parameters.vcfAggregation=NONE
 
@@ -27,9 +19,15 @@ parameters.contigNaming=SEQUENCE_NAME
 
 spring.jpa.show-sql=true
 
-spring.data.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
 spring.data.mongodb.database=test-db
+spring.data.mongodb.host=|eva.mongo.host.test|
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
 mongodb.read-preference=primary
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+
+# to fix exception javax.management.InstanceAlreadyExistsException: com.zaxxer.hikari:name=dataSource,type=HikariDataSource
+# see https://stackoverflow.com/a/51798043/2375586
+spring.jmx.enabled=false
