--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>eva-accession-deprecate</module>
         <module>eva-accession-import-dbsnp2</module>
         <module>eva-accession-clustering</module>
+        <module>eva-ingest-remapped-variants</module>
     </modules>
 
     <properties>
@@ -46,6 +47,11 @@
                 <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>eva-accession-remapping</artifactId>
                 <version>0.4.8-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.ac.ebi.eva</groupId>
+                <artifactId>eva-accession-clustering</artifactId>
+                <version>0.4.7-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>uk.ac.ebi.ampt2d</groupId>
