Parameterized test properties file

--- a/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-recover-test.properties
+++ b/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-recover-test.properties
@@ -5,13 +5,14 @@ accessioning.monotonic.test-pipeline-recover-ss.blockSize=100000
 accessioning.monotonic.test-pipeline-recover-ss.blockStartValue=5000000000
 accessioning.monotonic.test-pipeline-recover-ss.nextBlockInterval=1000000000
 
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
-spring.datasource.username=SA
-spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://|eva.postgres.host.test|:5432/test
+spring.datasource.username=testuser
+spring.datasource.password=testpass
 spring.datasource.schema=test-data/contiguous_id_blocks_schema.sql
 spring.datasource.data=test-data/contiguous_id_blocks_data.sql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.batch.initialize-schema=always
 
 parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
