Update accession recovery tests

--- a/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-recover-test.properties
+++ b/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-recover-test.properties
@@ -6,7 +6,7 @@ accessioning.monotonic.test-pipeline-recover-ss.blockStartValue=5000000000
 accessioning.monotonic.test-pipeline-recover-ss.nextBlockInterval=1000000000
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://|eva.postgres.host.test|:5432/test
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=testuser
 spring.datasource.password=testpass
 spring.datasource.schema=test-data/contiguous_id_blocks_schema.sql
@@ -28,9 +28,9 @@ parameters.contigNaming=SEQUENCE_NAME
 
 spring.jpa.show-sql=true
 
-spring.data.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
+spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=test-db
-spring.data.mongodb.host=|eva.mongo.host.test|
+spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 mongodb.read-preference=primary
@@ -41,3 +41,9 @@ spring.main.allow-bean-definition-overriding=true
 # to fix exception javax.management.InstanceAlreadyExistsException: com.zaxxer.hikari:name=dataSource,type=HikariDataSource
 # see https://stackoverflow.com/a/51798043/2375586
 spring.jmx.enabled=false
+
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL95Dialect
