Postgres install not easy - Revert changes to properties file

--- a/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-recover-test.properties
+++ b/eva-accession-pipeline/src/test/resources/properties/accession-pipeline-recover-test.properties
@@ -5,14 +5,13 @@ accessioning.monotonic.test-pipeline-recover-ss.blockSize=100000
 accessioning.monotonic.test-pipeline-recover-ss.blockStartValue=5000000000
 accessioning.monotonic.test-pipeline-recover-ss.nextBlockInterval=1000000000
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=testuser
-spring.datasource.password=testpass
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+spring.datasource.username=SA
+spring.datasource.password=
 spring.datasource.schema=test-data/contiguous_id_blocks_schema.sql
 spring.datasource.data=test-data/contiguous_id_blocks_data.sql
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.batch.initialize-schema=always
+spring.jpa.hibernate.ddl-auto=update
 
 parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
@@ -28,9 +27,9 @@ parameters.contigNaming=SEQUENCE_NAME
 
 spring.jpa.show-sql=true
 
-spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
 spring.data.mongodb.database=test-db
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 mongodb.read-preference=primary
@@ -41,9 +40,3 @@ spring.main.allow-bean-definition-overriding=true
 # to fix exception javax.management.InstanceAlreadyExistsException: com.zaxxer.hikari:name=dataSource,type=HikariDataSource
 # see https://stackoverflow.com/a/51798043/2375586
 spring.jmx.enabled=false
-
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL95Dialect
