--- a/eva-ingest-remapped-variants/src/test/resources/ingest-remapped-variants.properties
+++ b/eva-ingest-remapped-variants/src/test/resources/ingest-remapped-variants.properties
@@ -1,6 +1,7 @@
 parameters.vcf=src/test/resources/input-files/vcf/vcf_out_with_header.vcf
 parameters.assemblyAccession=GCA_000000001.2
 parameters.remappedFrom=GCA_000000001.1
+parameters.taxonomyAccession=1000
 parameters.chunkSize=2
 
 accessioning.instanceId=instance-01
