change module name from eva-ingest-remapped to eva-remapping-ingest

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>eva-accession-deprecate</module>
         <module>eva-accession-import-dbsnp2</module>
         <module>eva-accession-clustering</module>
-        <module>eva-ingest-remapped-variants</module>
+        <module>eva-remapping-ingest</module>
     </modules>
 
     <properties>
