Rectify pipelines with Spring Boot 1 job repo. compat.

--- a/eva-remapping-get-source/pom.xml
+++ b/eva-remapping-get-source/pom.xml
@@ -23,6 +23,10 @@
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>variation-commons-batch</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
             <artifactId>eva-accession-core</artifactId>
             <type>test-jar</type>
             <version>${project.version}</version>
