--- a/eva-remapping-get-source/pom.xml
+++ b/eva-remapping-get-source/pom.xml
@@ -41,6 +41,10 @@
             <groupId>com.github.samtools</groupId>
             <artifactId>htsjdk</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.batch</groupId>
