include parameter to specify target submitted variant collection (eva or dbsnp)

--- a/eva-remapping-ingest/src/test/resources/ingest-remapped-variants-dbsnp.properties
+++ b/eva-remapping-ingest/src/test/resources/ingest-remapped-variants-dbsnp.properties
@@ -1,8 +1,8 @@
-parameters.vcf=src/test/resources/input-files/vcf/vcf_out_with_header.vcf
+parameters.vcf=src/test/resources/input-files/vcf/vcf_out_with_header_dbsnp.vcf
 parameters.assemblyAccession=GCA_000000001.2
 parameters.remappedFrom=GCA_000000001.1
 # loadTo: Collection where the remapped variants should be loaded (EVA or DBSNP)
-parameters.loadTo=EVA
+parameters.loadTo=DBSNP
 parameters.chunkSize=2
 
 spring.data.mongodb.database=test-ingest-remapping
