--- a/eva-remapping-ingest/src/main/resources/application.properties
+++ b/eva-remapping-ingest/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.batch.job.names=INGEST_REMAPPED_VARIANTS_FROM_VCF_JOB
 parameters.vcf=
 parameters.assemblyAccession=
 parameters.remappedFrom=
+# loadTo: Collection where the remapped variants should be loaded (EVA or DBSNP)
+parameters.loadTo=
 parameters.chunkSize=100
 
 spring.data.mongodb.database=
