include contig replacement to genbank

--- a/eva-remapping-ingest/src/main/resources/application.properties
+++ b/eva-remapping-ingest/src/main/resources/application.properties
@@ -5,6 +5,7 @@ parameters.assemblyAccession=
 parameters.remappedFrom=
 # loadTo: Collection where the remapped variants should be loaded (EVA or DBSNP)
 parameters.loadTo=
+parameters.assemblyReportUrl=
 parameters.chunkSize=100
 
 spring.data.mongodb.database=
