--- a/eva-remapping-ingest/src/test/resources/ingest-remapped-variants-dbsnp.properties
+++ b/eva-remapping-ingest/src/test/resources/ingest-remapped-variants-dbsnp.properties
@@ -3,6 +3,7 @@ parameters.assemblyAccession=GCA_000000001.2
 parameters.remappedFrom=GCA_000000001.1
 # loadTo: Collection where the remapped variants should be loaded (EVA or DBSNP)
 parameters.loadTo=DBSNP
+parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/assembly_report.txt
 parameters.chunkSize=2
 
 spring.data.mongodb.database=test-ingest-remapping
