Revert to secondaryPreferred preference after MongoDB 4.0 migration

--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -12,7 +12,7 @@ accessioning.monotonic.rs.nextBlockInterval=1000000000
 
 spring.data.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded|@|eva.mongo.host|/admin
 spring.data.mongodb.database=|eva.accession.mongo.database|
-mongodb.read-preference=primaryPreferred
+mongodb.read-preference=|eva.mongo.read-preference|
 
 human.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded|@|eva.mongo.host|/admin
 human.mongodb.database=|eva.accession.mongo.human.database|
