Revert to secondaryPreferred preference after MongoDB 4.0 migration - part 2

--- a/eva-remapping-ingest/src/main/resources/application.properties
+++ b/eva-remapping-ingest/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.data.mongodb.database=
 spring.data.mongodb.host=
 spring.data.mongodb.password=
 spring.data.mongodb.port=
-mongodb.read-preference=primary
+mongodb.read-preference=secondaryPreferred
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
