--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.data.mongodb.port=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
 spring.data.mongodb.authentication-database=
-mongodb.read-preference=
+mongodb.read-preference=secondaryPreferred
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
