change mongo reader filter from in to is for the taxonomy prop

--- a/eva-remapping-get-source/src/main/resources/application.properties
+++ b/eva-remapping-get-source/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.batch.job.names=EXPORT_SUBMITTED_VARIANTS_JOB
 parameters.fasta=
 parameters.assemblyAccession=
 
-# comma-separated values. if empty, all projects in the assembly will be queried
+# projects: comma-separated values. if empty, all projects in the assembly will be queried
 parameters.projects=
+# taxonomy: optional, if empty, all taxonomies in the assembly will be queried
+parameters.taxonomy=
 
 # if empty, no contig replacement will be done
 parameters.assemblyReportUrl=
