--- a/eva-remapping-get-source/src/test/resources/with-projects.properties
+++ b/eva-remapping-get-source/src/test/resources/with-projects.properties
@@ -11,6 +11,7 @@ spring.jpa.show-sql=true
 
 parameters.assemblyAccession=GCA_000409795.2
 parameters.projects=PRJEB7923,PRJEB9999
+parameters.taxonomy=60711
 parameters.fasta=src/test/resources/input-files/fasta/GCF_000409795.2.test.fna
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/GCF_000409795.2_Chlorocebus_sabeus_1.1_assembly_report.txt
 parameters.outputFolder=/tmp/
