add remapping metadata model

--- a/eva-remapping-ingest/src/main/resources/application.properties
+++ b/eva-remapping-ingest/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.main.allow-bean-definition-overriding=true
 # to fix exception javax.management.InstanceAlreadyExistsException: com.zaxxer.hikari:name=dataSource,type=HikariDataSource
 # see https://stackoverflow.com/a/51798043/2375586
 spring.jmx.enabled=false
+
+build.version=123
