--- a/eva-remapping-ingest/src/test/resources/ingest-remapped-variants.properties
+++ b/eva-remapping-ingest/src/test/resources/ingest-remapped-variants.properties
@@ -16,3 +16,5 @@ mongodb.read-preference=primary
 spring.main.allow-bean-definition-overriding=true
 
 spring.jmx.enabled=false
+
+build.version=${project.version}
