--- a/eva-remapping-ingest/pom.xml
+++ b/eva-remapping-ingest/pom.xml
@@ -50,6 +50,7 @@
                     <execution>
                         <goals>
                             <goal>repackage</goal>
+                            <goal>build-info</goal>
                         </goals>
                     </execution>
                 </executions>
