include remapping and accession version in metadata

--- a/eva-remapping-ingest/src/main/resources/application.properties
+++ b/eva-remapping-ingest/src/main/resources/application.properties
@@ -6,6 +6,7 @@ parameters.remappedFrom=
 # loadTo: Collection where the remapped variants should be loaded (EVA or DBSNP)
 parameters.loadTo=
 parameters.assemblyReportUrl=
+parameters.remappingVersion =
 parameters.chunkSize=100
 
 spring.data.mongodb.database=
@@ -21,4 +22,4 @@ spring.main.allow-bean-definition-overriding=true
 # see https://stackoverflow.com/a/51798043/2375586
 spring.jmx.enabled=false
 
-build.version=123
+build.version=|project.version|
